--- a/three_pixi4.html
+++ b/three_pixi4.html
@@ -17,9 +17,19 @@
 </head>
 
 <body>
+	<!-- Import maps polyfill -->
+	<!-- Remove this when import maps will be widely supported -->
+	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+	<script type="importmap">
+		{
+			"imports": {
+				"three": "https://unpkg.com/three@0.146.0/build/three.module.js"
+			}
+		}
+	</script>
 	<script src="https://unpkg.com/pixi.js@4.8.9/dist/pixi.min.js"></script>
 	<script type="module">
-		import * as THREE from 'https://unpkg.com/three@0.136.0/build/three.module.js';
+		import * as THREE from 'three';
 
 		var width = window.innerWidth;
 		var height = window.innerHeight;
@@ -34,9 +44,8 @@
 		var camera = new THREE.PerspectiveCamera( 75, width / height, 1, 10000 );
 		camera.position.set( 0, 0, 700 );
 
-		var renderer = new THREE.WebGLRenderer( {
-			antialias: true
-		} );
+		var renderer = new THREE.WebGLRenderer( { antialias: true } );
+		renderer.setPixelRatio( window.devicePixelRatio );
 		renderer.setSize( width, height );
 		renderer.setClearColor( scene.fog.color, 1 );
 		document.body.appendChild( renderer.domElement );
