--- a/three_pixi7.html
+++ b/three_pixi7.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>threejs - pixi v5</title>
+	<title>threejs - pixi v7</title>
 	<style>
 		body {
 			margin: 0;
@@ -27,7 +27,7 @@
 			}
 		}
 	</script>
-	<script src="https://unpkg.com/pixi.js@5.3.11/dist/pixi.min.js"></script>
+	<script src="https://unpkg.com/pixi.js@7.0.2/dist/pixi.min.js"></script>
 	<script type="module">
 		import * as THREE from 'three';
 
@@ -64,7 +64,7 @@
 		var app = new PIXI.Application( {
 			width,
 			height,
-			transparent: true
+			backgroundAlpha: 0
 		} );
 
 		var graphics = new PIXI.Graphics();
