--- a/three-pixi4.html
+++ b/three-pixi4.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>threejs - pixi v6</title>
+	<title>threejs - pixi v4</title>
 	<style>
 		body {
 			margin: 0;
@@ -23,11 +23,11 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "https://unpkg.com/three@0.146.0/build/three.module.js"
+				"three": "https://unpkg.com/three@0.149.0/build/three.module.js"
 			}
 		}
 	</script>
-	<script src="https://unpkg.com/pixi.js@6.2.1/dist/browser/pixi.min.js"></script>
+	<script src="https://unpkg.com/pixi.js@4.8.9/dist/pixi.min.js"></script>
 	<script type="module">
 		import * as THREE from 'three';
 
@@ -61,9 +61,9 @@
 		// 2D UI canvas
 		//-------------------------------------------------------------------------------------
 
-		var app = new PIXI.Application( {
-			width,
-			height,
+		var stage = new PIXI.Stage();
+
+		var app = PIXI.autoDetectRenderer( width, height, {
 			transparent: true
 		} );
 
@@ -75,7 +75,7 @@
 		graphics.lineTo( width / 2 + 200, height / 2 + 100 );
 		graphics.endFill();
 
-		app.stage.addChild( graphics );
+		stage.addChild( graphics );
 
 		//-------------------------------------------------------------------------------------
 		// Map 2D UI canvas on 3D Plane
@@ -101,7 +101,7 @@
 		// Render Animation
 		//-------------------------------------------------------------------------------------
 
-		app.render();
+		app.render( stage );
 
 		function animate() {
 
