add pixi.js@8.0.0 example

--- a/three-pixi8.html
+++ b/three-pixi8.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>threejs - pixi v4</title>
+	<title>threejs - pixi v8</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,12 +16,12 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "https://unpkg.com/three@0.163.0/build/three.module.js"
+				"three": "https://unpkg.com/three@0.163.0/build/three.module.js",
+				"pixi": "https://unpkg.com/pixi.js@8.1.0/dist/pixi.mjs"
 			}
 		}
 	</script>
-	<script src="https://unpkg.com/pixi.js@4.8.9/dist/pixi.min.js"></script>
-	<script type="module" src="v4.js"></script>
+	<script type="module" src="v8.js"></script>
 </body>
 
 </html>
